0.7.1 (api:75/proto:74)
-----
  *) Upgrade instructions for 0.6.x -> 0.7.0 and 0.7.0 -> 0.7.1
  *) Workaround for XFS' IO requests with page count of zero.
  *) Handle the human and the timeout count correctly in the new init script.
  *) The implementation of the incon-degr-cmd was missing, added.
  *) Longer timeouts in drbdadm for drbdsetup commands witch operate on 
     meta data.
  *) New major number 147 (officially registered at lanana.org).
  *) Added a missing w_resume_next_wg() in case we stop syncing because
     of connection loss.
  *) Fixed a Linux-2.2-ismus in recieve_data_tail(). Should considerably
     speed up protocols A and B.
  *) Some work on vendor kernel compatibility
	
0.7.0 (api:74/proto:74)
-----
  Drbd-0.7 was actually forked off from drbd-0.6.1 (actually -pre18). 

  *) Complete new way of doing resynchronisation. Does no longer need
     to do tricks with the nice value, and delivers very good performace.
  *) Decoupling of role assignment (primary/secondary) from the direction
     of resynchronisation. (Necessary for primary/primary)
  *) All "ack" and "ping" packets now go through the msock. 
     (Prerequisite for primary/primary)
  *) Reworked a lot of internals to work with sector_t instead of
     blocknumbers. DRBD works now with XFS, and will be complete
     immune to changes in the block size.
  *) Reworked the tl_ code, the user no longer has to specify the size
     for a preallocated transfer-log.
  *) Improved metadata; Ao the device size is now stored in metadata,
     users no longer need to configure it.
  *) Online resizing via "drbdsetup resize"
  *) Resynchronisation groups "drbdsetup syncer -g"
  *) New (very short!) sys-v init scripts, new userland tool "drbdadm"
  *) Changes to the way we allocate memory. We want to survive hard OOM
     situations. (partially done, partially ongoing work) 
  *) Implemented the Activity-Log and the persistent bitmap.
	
0.6.1  (api:58/proto:61)
-----